@@ -22,7 +22,6 @@ import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
@@ -109,8 +108,6 @@ public class NodeConfig {
 
   private final boolean useSchemaCache;
 
-  private final String managementPath;
-
   private final PluginInfo[] backupRepositoryPlugins;
 
   private final MetricsConfig metricsConfig;
@@ -146,7 +143,6 @@ public class NodeConfig {
       int replayUpdatesThreads,
       int indexSearcherExecutorThreads,
       boolean useSchemaCache,
-      String managementPath,
       Path solrHome,
       SolrResourceLoader loader,
       Properties solrProperties,
@@ -185,13 +181,12 @@ public class NodeConfig {
     this.replayUpdatesThreads = replayUpdatesThreads;
     this.indexSearcherExecutorThreads = indexSearcherExecutorThreads;
     this.useSchemaCache = useSchemaCache;
-    this.managementPath = managementPath;
     this.solrHome = solrHome;
     this.loader = loader;
     this.solrProperties = solrProperties;
     this.backupRepositoryPlugins = backupRepositoryPlugins;
     this.metricsConfig = metricsConfig;
-    this.cachesConfig = cachesConfig == null ? Collections.emptyMap() : cachesConfig;
+    this.cachesConfig = cachesConfig == null ? Map.of() : cachesConfig;
     this.tracerConfig = tracerConfig;
     this.clusterPlugins = clusterPlugins;
     this.defaultZkHost = defaultZkHost;
@@ -257,7 +252,7 @@ public class NodeConfig {
               .withConnTimeOut(startUpZkTimeOut, TimeUnit.MILLISECONDS)
               .withSolrClassLoader(loader)
               .build()) {
-        zkClient.exists("/configs", true);
+        zkClient.exists("/configs");
       } catch (Exception e) {
         throw new SolrException(
             ErrorCode.SERVER_ERROR, "Error occurred while testing zookeeper connection", e);
@@ -378,10 +373,6 @@ public class NodeConfig {
 
   public boolean hasSchemaCache() {
     return useSchemaCache;
-  }
-
-  public String getManagementPath() {
-    return managementPath;
   }
 
   /** Absolute. */
@@ -589,7 +580,7 @@ public class NodeConfig {
     private UpdateShardHandlerConfig updateShardHandlerConfig = UpdateShardHandlerConfig.DEFAULT;
     private String configSetServiceClass;
     private String coreAdminHandlerClass = DEFAULT_ADMINHANDLERCLASS;
-    private Map<String, String> coreAdminHandlerActions = Collections.emptyMap();
+    private Map<String, String> coreAdminHandlerActions = Map.of();
     private String collectionsAdminHandlerClass = DEFAULT_COLLECTIONSHANDLERCLASS;
     private String healthCheckHandlerClass = DEFAULT_HEALTHCHECKHANDLERCLASS;
     private String infoHandlerClass = DEFAULT_INFOHANDLERCLASS;
@@ -600,7 +591,6 @@ public class NodeConfig {
     private int replayUpdatesThreads = Runtime.getRuntime().availableProcessors();
     private int indexSearcherExecutorThreads = DEFAULT_INDEX_SEARCHER_EXECUTOR_THREADS;
     private boolean useSchemaCache = false;
-    private String managementPath;
     private Properties solrProperties = new Properties();
     private PluginInfo[] backupRepositoryPlugins;
     private MetricsConfig metricsConfig;
@@ -608,8 +598,8 @@ public class NodeConfig {
     private PluginInfo tracerConfig;
     private PluginInfo[] clusterPlugins;
     private String defaultZkHost;
-    private Set<Path> allowPaths = Collections.emptySet();
-    private List<String> allowUrls = Collections.emptyList();
+    private Set<Path> allowPaths = Set.of();
+    private List<String> allowUrls = List.of();
     private boolean hideStackTrace =
         !EnvUtils.getPropertyAsBool("solr.responses.stacktrace.enabled", true);
 
@@ -769,11 +759,6 @@ public class NodeConfig {
       return this;
     }
 
-    public NodeConfigBuilder setManagementPath(String managementPath) {
-      this.managementPath = managementPath;
-      return this;
-    }
-
     public NodeConfigBuilder setSolrProperties(Properties solrProperties) {
       this.solrProperties = solrProperties;
       return this;
@@ -859,7 +844,7 @@ public class NodeConfig {
           hiddenSysProps = fromProps;
         }
       }
-      Set<String> hiddenSysPropSet = Collections.emptySet();
+      Set<String> hiddenSysPropSet = Set.of();
       if (hiddenSysProps != null) {
         hiddenSysPropSet =
             StrUtils.splitSmart(hiddenSysProps, ',').stream()
@@ -899,7 +884,6 @@ public class NodeConfig {
           replayUpdatesThreads,
           indexSearcherExecutorThreads,
           useSchemaCache,
-          managementPath,
           solrHome,
           loader,
           solrProperties,
