@@ -43,6 +43,7 @@ import org.apache.solr.common.ConfigNode;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.util.CollectionUtil;
 import org.apache.solr.common.util.DOMUtil;
+import org.apache.solr.common.util.EnvUtils;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.common.util.Utils;
@@ -164,10 +165,6 @@ public class SolrXmlConfig {
     configBuilder.setBackupRepositoryPlugins(
         getBackupRepositoryPluginInfos(root.get("backup").getAll("repository")));
     configBuilder.setClusterPlugins(getClusterPlugins(loader, root));
-    // <metrics><hiddenSysProps></metrics> will be removed in Solr 10, but until then, use it if a
-    // <hiddenSysProps> is not provided under <solr>.
-    // Remove this line in 10.0
-    configBuilder.setHiddenSysProps(getHiddenSysProps(root.get("metrics")));
     configBuilder.setMetricsConfig(getMetricsConfig(root.get("metrics")));
     configBuilder.setCachesConfig(getCachesConfig(loader, root.get("caches")));
     configBuilder.setDefaultZkHost(defaultZkHost);
@@ -347,9 +344,6 @@ public class SolrXmlConfig {
               case "maxBooleanClauses":
                 builder.setBooleanQueryMaxClauseCount(it.intVal(-1));
                 break;
-              case "managementPath":
-                builder.setManagementPath(it.txt());
-                break;
               case "sharedLib":
                 builder.setSharedLibDirectory(it.txt());
                 break;
@@ -400,14 +394,14 @@ public class SolrXmlConfig {
 
   private static List<String> separateStrings(String commaSeparatedString) {
     if (StrUtils.isNullOrEmpty(commaSeparatedString)) {
-      return Collections.emptyList();
+      return List.of();
     }
     return Arrays.asList(COMMA_SEPARATED_PATTERN.split(commaSeparatedString));
   }
 
   private static Set<Path> separatePaths(String commaSeparatedString) {
     if (StrUtils.isNullOrEmpty(commaSeparatedString)) {
-      return Collections.emptySet();
+      return Set.of();
     }
     // Parse the list of paths. The special values '*' and '_ALL_' mean all paths.
     String[] pathStrings = COMMA_SEPARATED_PATTERN.split(commaSeparatedString);
@@ -499,17 +493,10 @@ public class SolrXmlConfig {
     int hostPort =
         parseInt("hostPort", required("solrcloud", "hostPort", removeValue(nl, "hostPort")));
     if (hostPort <= 0) {
-      // Default to the port that jetty is listening on, or 8983 if that is not provided.
-      hostPort = parseInt("jetty.port", System.getProperty("jetty.port", "8983"));
+      // Default to the port that Solr is listening on, or 8983 if that is not provided.
+      hostPort = EnvUtils.getPropertyAsInteger("solr.port.listen", 8983);
     }
     String hostName = required("solrcloud", "host", removeValue(nl, "host"));
-
-    // We no longer require or support the hostContext property, but legacy users may have it, so
-    // remove it from the list.
-    String hostContext = removeValue(nl, "hostContext");
-    if (hostContext != null) {
-      log.warn("solr.xml hostContext -- hostContext is deprecated and ignored.");
-    }
 
     CloudConfig.CloudConfigBuilder builder = new CloudConfig.CloudConfigBuilder(hostName, hostPort);
     // set the defaultZkHost until/unless it's overridden in the "cloud section" (below)...
@@ -531,9 +518,6 @@ public class SolrXmlConfig {
           break;
         case "zkHost":
           builder.setZkHost(value);
-          break;
-        case "genericCoreNodeNames":
-          builder.setUseGenericCoreNames(Boolean.parseBoolean(value));
           break;
         case "zkACLProvider":
           builder.setZkACLProviderClass(value);
@@ -757,26 +741,6 @@ public class SolrXmlConfig {
       }
     }
     return o;
-  }
-
-  /**
-   * Deprecated as of 9.3, will be removed in 10.0
-   *
-   * @param metrics configNode for the metrics
-   * @return a comma-separated list of hidden Sys Props
-   */
-  @Deprecated(forRemoval = true, since = "9.3")
-  private static String getHiddenSysProps(ConfigNode metrics) {
-    ConfigNode p = metrics.get("hiddenSysProps");
-    if (!p.exists()) return null;
-    Set<String> props = new HashSet<>();
-    p.forEachChild(
-        it -> {
-          if (it.name().equals("str") && StrUtils.isNotNullOrEmpty(it.txt()))
-            props.add(Pattern.quote(it.txt()));
-          return Boolean.TRUE;
-        });
-    return String.join(",", props);
   }
 
   private static PluginInfo getPluginInfo(ConfigNode cfg) {
